<resources>
    <string name="app_name">Peligro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="register">REGISTRATION</string>
    <string name="name">Full Name</string>
    <string name="password">Password</string>
    <string name="vpass">Verify the password</string>
    <string name="phone">Phone Number</string>
    <string name="email">E-Mail</string>
    <string name="emailEg">example@domain.com</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="resend">Resend</string>
    <string name="loading">Checking connectivity&#8230;</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>
    <string name="enterCode">Enter your code below</string>
    <string name="enterCodeHere">Enter your code here</string>
    <string name="conMsg">Confirmation message has been sent to the given number</string>
    <string name="title_activity_init_setting">InitSettingActivity</string>
    <string name="initial_settings">INITIAL SETTINGS</string>
    <string name="skip">Click here to skip to main menu</string>
    <string name="DOB">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="disease">Any active disease?</string>
    <string name="locationInput">Click here to enter home location</string>
    <string name="resetLocation">You can change the home location later from the settings menu</string>
    <string name="dob">dd-mm-yyyy</string>
    <string name="hiph">-</string>
    <string name="dd">dd</string>
    <string name="mm">mm</string>
    <string name="yyyy">yyyy</string>
    <string name="title_activity_final_info">FinalInfoActivity</string>
    <string name="verify">Please verify your details</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="alert">Alert</string>
    <string name="police">Police</string>
    <string name="fire">Fire</string>
    <string name="ambulance">Ambulance</string>
    <string name="emergency">Emergency</string>
    <string name="policeNum">100</string>
    <string name="fireNum">101</string>
    <string name="ambulanceNum">102</string>
    <string name="emergencyNum">103</string>
    <string name="title_activity_get_location">Map</string>
    <string name="exit">Exit</string>


    <string-array name="drawer">
        <item>Reset data</item>
        <item>View Data</item>
        <item>Settings</item>
    </string-array>
        <string name="title_activity_main_activity_drawer">MainActivityDrawer</string>

    <string name="title_section1">Re Enter home location</string>
    <string name="title_section2">Logout</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
        <string name="title_activity_map_view">MapViewActivity</string>

    <string name="confirmLoc">Confirm your location</string>
     <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Please wait while we connect you to the server &#8230;</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
        <string name="title_activity_test">TestActivity</string>
        <string name="title_activity_alert">AlertActivity</string>
    <string name="reset">reset</string>
        <string name="title_activity_alert_map">AlertMapActivity</string>
        <string name="title_activity_main_activity_navigation">MainActivityNavigation</string>
    <string name="title_activity_test_map">Map</string>

</resources>

