<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.peligro.pda.peligro.MainActivity"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:id="@+id/AlertLayout"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLayout5"
        android:layout_alignParentTop="true">

        <Button
                android:layout_weight="1"
                style="@android:style/ButtonBar"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/alert"
                android:textSize="50dp"
                android:id="@+id/alert"
            android:background="@drawable/header"/>

        <LinearLayout
                android:paddingTop="20dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/emergencyNumber">

                <LinearLayout
                    android:id="@+id/policeLayout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/police"
                        android:id="@+id/policeTV" />

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/policeNum"
                        android:id="@+id/policeNumTV" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fireLayout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/fire"
                        android:id="@+id/fireTV" />

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/fireNum"
                        android:id="@+id/fireNumTV" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ambulanceLayout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ambulance"
                        android:id="@+id/ambulanceTV" />

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/ambulanceNum"
                        android:id="@+id/ambulanceNumTV" />
                </LinearLayout>

                <LinearLayout

                    android:id="@+id/emergencyLayout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/emergency"
                        android:id="@+id/emergencyTV" />

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/emergencyNum"
                        android:id="@+id/emergencyNumTV" />
                </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:id="@+id/reset"
                android:layout_gravity="center" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLayout5"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="fill_parent"
            style="@android:style/ButtonBar"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:id="@+id/exit" />
    </LinearLayout>

</RelativeLayout>
