<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.peligro.pda.peligro.ConfirmationActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/confirmation"
        android:id="@+id/conTV"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_below="@+id/conTV"
        android:layout_above="@+id/buttonLayout2"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_alignParentTop="true"
                android:maxLines="3"
                android:text="@string/conMsg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmNumberTV"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend"
                android:id="@+id/resend"
                android:layout_gravity="center"
                android:layout_below="@+id/confirmNumberTV"
                android:layout_alignLeft="@+id/confirmBtn"
                android:layout_alignStart="@+id/confirmBtn" />

            <TextView
                android:layout_below="@+id/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enterCode"
                android:id="@+id/enterCodeTV"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:hint="@string/enterCodeHere"
                android:layout_below="@+id/enterCodeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/getCode"
                android:layout_gravity="center_horizontal" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:id="@+id/confirmBtn"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/getCode"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmAlert"
                android:layout_below="@+id/confirmBtn"
                android:layout_gravity="center_horizontal" />

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonLayout2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:layout_width="wrap_content"
            style="@android:style/ButtonBar"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:id="@+id/previous2"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:clickable="false"
            android:background="@color/orange"/>

        <Button
            android:layout_width="wrap_content"
            style="@android:style/ButtonBar"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next2"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:clickable="false"
            android:background="@color/orange"/>
    </LinearLayout>


</RelativeLayout>
