<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.peligro.pda.peligro.InitSettingActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="fill_parent"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/initial_settings"
        android:id="@+id/initialSettingsTV"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="30dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3"
        android:layout_below="@+id/initialSettingsTV"
        android:layout_above="@+id/buttonLayout3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#0000ff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/skip"
                android:id="@+id/skipTV"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <LinearLayout
                android:id="@+id/dobLL"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/skipTV">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/DOB"
                    android:id="@+id/dateOfBirthTV" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/dd"
                        android:id="@+id/day" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/hiph"
                        android:id="@+id/textView"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/mm"
                        android:id="@+id/month"
                        android:layout_weight="2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/hiph"
                        android:layout_weight="1"
                        android:id="@+id/textView3" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/year"
                        android:hint="@string/yyyy"
                        android:layout_weight="4" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/selectionLL"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/dobLL"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textOff="@string/female"
                        android:textOn="@string/male"
                        android:id="@+id/genderSwitch" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/genderTV" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Switch
                        android:textOn="YES"
                        android:textOff="NO"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/disease"
                        android:id="@+id/disease" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/diseaseTV" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/selectionLL"
                android:layout_centerHorizontal="true"
                android:id="@+id/linearLayout"
                android:paddingTop="30dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/locationInput"
                    android:id="@+id/locationInput"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:textColor="#0f0"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/resetLocation"
                    android:id="@+id/resetLocationTV"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#f00"
                    android:id="@+id/AlertText4"
                    android:paddingTop="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/address"
                    android:layout_below="@id/AlertText4" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/buttonLayout3">

        <Button
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:id="@+id/previous3"
            android:layout_gravity="bottom" />

        <Button
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next3"
            android:layout_gravity="bottom" />
    </LinearLayout>
</RelativeLayout>
