<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.peligro.pda.peligro.RegistrationActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register"
        android:id="@+id/Register"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:background="@color/orange"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Register"
        android:layout_alignLeft="@+id/Register"
        android:layout_alignStart="@+id/Register"
        android:id="@+id/nameLayout"
        android:layout_marginTop="32dp"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/nameTV" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:background="@drawable/curved_bg"
            android:padding="10dp"
            android:id="@+id/name" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/passwordLayout"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/passwordTV" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:background="@drawable/curved_bg"
            android:padding="10dp"
            android:id="@+id/password" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vpassLayout"
        android:layout_below="@+id/passwordLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vpass"
            android:id="@+id/confirmPassTV" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/vpass"
            android:background="@drawable/curved_bg"
            android:padding="10dp"
            android:id="@+id/ConfirmPassword" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vpassLayout"
        android:id="@+id/phoneLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:id="@+id/phoneTV" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"
            android:ems="10"
            android:background="@drawable/curved_bg"
            android:padding="10dp"
            android:id="@+id/phone" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailLayout"
        android:layout_below="@+id/phoneLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/emailTV" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/emailEg"
            android:ems="10"
            android:background="@drawable/curved_bg"
            android:padding="10dp"
            android:id="@+id/email" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/emailLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AlertTV"
            android:textColor="#ff0000"
            android:layout_alignParentTop="true" />

        <Button

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            style="@android:style/ButtonBar"
            android:id="@+id/submit"
            android:background="@color/orange"
            android:shadowDx="@android:integer/config_longAnimTime"
            android:shadowDy="@android:integer/config_longAnimTime"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

</RelativeLayout>
